# fact-sorter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  README.md  app.py  cdk.json  justfile  pyproject.toml  pytest.ini  ruff.toml  template.yaml
.github/workflows/: cleanup-cache.yml  pipeline.yml
cdk/: __init__.py  eb_learning_stack.py  fact_sorter_stack.py  lambda_function.py
cdk/base_constructs/: __init__.py  lambda_construct.py
docs/: ARCHITECTURE.md
eventbus_learning/: eb.py
eventbus_learning/application/: get_fact.py
eventbus_learning/application/base/: handler.py  logger.py
eventbus_learning/infrastructure/: __init__.py  stack.py
fact_sorter/: __init__.py
fact_sorter/application/: __init__.py  cat_fact.py  dog_fact.py  get_fact.py
fact_sorter/application/base/: handler.py  logger.py
tests/unit_tests/: test_eb.py
tests/unit_tests/application/: test_get_fact.py
tests/unit_tests/application/base/: test_base_handler.py  test_logger.py
tests/unit_tests/cdk/: test_fact_sorter_stack.py  test_stack.py
tests/unit_tests/cdk/base_constructs/: test_lambda_construct.py
tests/unit_tests/cdk/factories/: __init__.py  stack_resources.py
tests/unit_tests/eventbus_learning/application/: test_get_fact.py
tests/unit_tests/fact_sorter/application/: test_cat_fact.py  test_dog_fact.py  test_get_fact.py
tests/unit_tests/fact_sorter/application/base/: test_base_handler.py  test_logger.py
tests/unit_tests/factories/: __init__.py  stack_resources.py
tests/unit_tests/infrastructure/: test_stack.py
