[tool.poetry]
name = "eventbus-learning"
version = "0.1.0"
description = "Simple Eventbus project for learning purposes."
authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
aws-cdk-lib = "^2.165.0"
constructs = "^10.4.2"
python = "^3.12"
requests = "^2.32.3"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
boto3 = "^1.35.52"
botocore = "^1.35.52"
coverage = "^7.6.4"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
ruff = "^0.7.1"
safety = "^3.2.10"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
