[tool.poetry]
name = "eventbus-learning"
version = "0.1.0"
description = "Simple Eventbus project for learning purposes."
authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "^2.173.2"
bandit = "^1.8.0"
boto3 = "^1.35.85"
botocore = "^1.35.85"
constructs = "^10.4.2"
coverage = "^7.6.9"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
ruff = "^0.8.4"
safety = "^3.2.13"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
